# simple_shader

./: Attrib.cpp  Attrib.h  CMakeLists.txt  EBO.h  Material.cpp  Material.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Uniforms.cpp  Uniforms.h  VBO.cpp  VBO.h  main.cpp  point.h
